--- a/Resources/Prototypes/_CP14/Maps/Factoria.yml
+++ b/Resources/Prototypes/_CP14/Maps/Factoria.yml
@@ -1,12 +1,12 @@
 - type: gameMap
   id: Factoria
   mapName: "Fatoria island"
-  mapPath: /Maps/_CP14/comoss.yml
+  mapPath: /Maps/_CP14/factoia.yml
   maxRandomOffset: 0
   randomRotation: false
   minPlayers: 0
   stations:
-    Comoss:
+    Factoria:
       stationProto: CP14BaseExpedition
       components:
         - type: StationNameSetup
