fix gravity and atmos

--- a/Resources/Prototypes/_CP14/Maps/Factoria.yml
+++ b/Resources/Prototypes/_CP14/Maps/Factoria.yml
@@ -10,7 +10,7 @@
       stationProto: CP14BaseExpedition
       components:
         - type: StationNameSetup
-          mapNameTemplate: "Fatoria island"
+          mapNameTemplate: "Factoria"
         - type: StationJobs
           availableJobs:
             #Mercenary
