--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
@@ -62,7 +62,7 @@
       drop:
         maxVol: 10
         reagents:
-        - ReagentId: Beer
+        - ReagentId: CP14DwarfBeer
           Quantity: 10
 
 - type: entity
