counter spell, and 2 new spell scrolls

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
@@ -42,3 +42,12 @@
       color: "#4097bd"
   - type: PointLight
     color: "#4097bd"
+
+- type: entity
+  parent: CP14BaseSpellScrollHealing
+  id: CP14SpellScrollMagicalAcceleration
+  name: magical accseleration spell scroll
+  components:
+  - type: CP14SpellStorage
+    spells:
+    - CP14ActionSpellMagicalAcceleration
