--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Healing/magical_acceleration.yml
@@ -51,3 +51,16 @@
   - type: CP14SpellStorage
     spells:
     - CP14ActionSpellMagicalAcceleration
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:SpawnEntitiesBehavior
+        spawn:
+            CP14Ash1:
+              min: 1
+              max: 1
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
