--- a/Resources/Prototypes/_CP14/Maps/comoss.yml
+++ b/Resources/Prototypes/_CP14/Maps/comoss.yml
@@ -22,8 +22,8 @@
             CP14Blacksmith: [ 2, 2 ]
             CP14Innkeeper: [ 3, 4 ]
             #Traders
-            #CP14Commandant: [1, 1]
-            #CP14Merchant: [3, 4]
+            CP14Commandant: [1, 1]
+            CP14Merchant: [3, 4]
             #Guard
             CP14Guard: [8, 8]
             CP14GuardCommander: [1, 1]
