--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -15,6 +15,9 @@
     effects:
     - !type:CP14SpellProjectile
       prototype: CP14IceShard
+    - !type:CP14SpellSpawnEntityOnUser
+      spawns:
+      - CP14ImpactEffectWaterCreation
   - type: CP14MagicEffectVerbalAspect
     endSpeech: "Glacies acus!"
   - type: CP14MagicEffectCastingVisual
@@ -30,10 +33,8 @@
     icon:
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: ice_shards
-    event: !type:CP14DelayedEntityWorldTargetActionEvent
-      cooldown: 0.25
-      castDelay: 0.25
-      breakOnMove: false
+    event: !type:CP14EntityWorldTargetActionEvent
+      cooldown: 0.5
 
 - type: entity
   id: CP14RuneIceShards
