--- a/Resources/Maps/_CP14/comoss_d.yml
+++ b/Resources/Maps/_CP14/comoss_d.yml
@@ -33,7 +33,7 @@ entities:
       name: Map Entity
     - type: Transform
     - type: Map
-      mapPaused: True
+      mapPaused: False
     - type: PhysicsMap
     - type: GridTree
     - type: MovedGrids
