--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_leaf_maze.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_leaf_maze.yml
@@ -1,7 +1,7 @@
 - type: cp14DemiplaneLocation
   id: T1LeafMaze
   tier: 1
-  locationConfig: CP14DemiplanLeafMaze
+  locationConfig: CP14DemiplaneLeafMaze
   name: cp14-demiplane-location-leaf-maze
   tags:
   - CP14DemiplaneHerbals
